# voice_gpu_server

./: .env.example  .gitignore  README.md  ngrok.yml.example  pyproject.toml
.cursor/skills/chatterbox-paralinguistic-tags/: SKILL.md  reference.md
pipecat_services/: __init__.py  gpu_stt.py  gpu_tts.py  singlish_tts.py
scripts/: fix-pytorch.sh  run-server.sh  setup-h100.sh  setup-lightning.sh  start-ngrok.sh  test-api.sh
tests/: test_chatterbox_streaming.py  test_gpu_tts.py  test_health.py  test_singlish_tts.py
voice_gpu_server/: __init__.py  __main__.py  app.py  audio_utils.py  auth.py  chatterbox_streaming.py  config.py  schemas.py
voice_gpu_server/models/: __init__.py  manager.py  stt_canary.py  tts_chatterbox.py
voices/: README.md
